Add fixes, changes, features:
* Code cleaning (need a lot more)
* Introduce Enum UID, instead const UID_*
* Element inherit from typing.Subject
* Introduce Message and CallMethod as Element item

--- a/test.ipynb
+++ b/test.ipynb
@@ -2921,7 +2921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "\"\"\" IMPORT RXPY \"\"\"\n",
@@ -4348,36 +4348,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "on error: __init__() got multiple values for argument 'src' | group_by src\n",
+      "(9698) on next: Message(1.5, src0, None, 0, 1643623686.744303) | group_by src\n",
+      "(9698) on next: Message(2.0, src1, None, 0, 1643623686.7444587) | group_by src\n",
+      "completed | group_by src\n",
       "\n",
-      "(7112) on next: CallMethod(src='src0', dst=None, hops=0, timestamp=1643559801.013751, name='method_name', args=['arg0'], kwargs={'kwarg0': 'kwarg0_value'}) | method call\n",
+      "(9548) on next: CallMethod(src='src0', dst=None, hops=0, timestamp=1643623686.6173112, name='method_name', args=['arg0'], kwargs={'kwarg0': 'kwarg0_value'}) | method call\n",
       "completed | method call\n",
       "\n",
-      "(7043) on next: Message(src='src0', dst=None, hops=1, timestamp=1643559801.0135925, value=1) | global (not grouped)\n",
-      "(7043) on next: Message(src='src0', dst=None, hops=1, timestamp=1643559801.0136855, value=2) | global (not grouped)\n",
-      "(7043) on next: Message(src='src1', dst=None, hops=1, timestamp=1643559801.0138876, value=3) | global (not grouped)\n",
+      "(9680) on next: Message(1, src0, None, 1, 1643623686.6172044) | global (not grouped)\n",
+      "(9680) on next: Message(2, src0, None, 1, 1643623686.6172693) | global (not grouped)\n",
+      "(9680) on next: Message(3, src1, None, 1, 1643623686.6173944) | global (not grouped)\n",
       "completed | global (not grouped)\n",
       "\n",
-      "(1876) on next: Message(src='src0', dst=None, hops=1, timestamp=1643559801.0135925, value=1) | dst0\n",
-      "(1876) on next: Message(src='src0', dst=None, hops=1, timestamp=1643559801.0136423, value=1) | dst0\n",
-      "(1876) on next: Message(src='src0', dst=None, hops=1, timestamp=1643559801.0136855, value=2) | dst0\n",
-      "(1876) on next: CallMethod(src='src0', dst=None, hops=0, timestamp=1643559801.013751, name='method_name', args=['arg0'], kwargs={'kwarg0': 'kwarg0_value'}) | dst0\n",
-      "(6429) on next: Message(src='src1', dst=None, hops=1, timestamp=1643559801.013799, value=1) | dst1\n",
-      "(6429) on next: Message(src='src1', dst=None, hops=1, timestamp=1643559801.013843, value=2) | dst1\n",
-      "(6429) on next: Message(src='src1', dst=None, hops=1, timestamp=1643559801.0138876, value=3) | dst1\n"
+      "(7937) on next: Message(1, src0, None, 1, 1643623686.6172044) | dst0\n",
+      "(7937) on next: Message(1, src0, None, 1, 1643623686.6172392) | dst0\n",
+      "(7937) on next: Message(2, src0, None, 1, 1643623686.6172693) | dst0\n",
+      "(7937) on next: CallMethod(src='src0', dst=None, hops=0, timestamp=1643623686.6173112, name='method_name', args=['arg0'], kwargs={'kwarg0': 'kwarg0_value'}) | dst0\n",
+      "(1987) on next: Message(1, src1, None, 1, 1643623686.6173415) | dst1\n",
+      "(1987) on next: Message(2, src1, None, 1, 1643623686.6173692) | dst1\n",
+      "(1987) on next: Message(3, src1, None, 1, 1643623686.6173944) | dst1\n"
      ]
     },
     {
      "data": {
-      "text/plain": "<rx.disposable.disposable.Disposable at 0x7fdff0e76f10>"
+      "text/plain": "<rx.disposable.disposable.Disposable at 0x7f84cd32cf10>"
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4399,6 +4401,9 @@
     "@dataclass\n",
     "class Message(Item):\n",
     "    value: Any = None\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"{self.__class__.__name__}({self.value}, {self.src}, {self.dst}, {self.hops}, {self.timestamp})\"\n",
     "\n",
     "@dataclass\n",
     "class CallMethod(Item):\n",
@@ -4432,7 +4437,7 @@
     "        lambda grp: grp.pipe(\n",
     "            ops.distinct(lambda item: item.value),\n",
     "            ops.average(lambda item: item.value),\n",
-    "            ops.map(lambda avg: Message(avg, src=grp.key))\n",
+    "            ops.map(lambda avg: Message(value=avg, src=grp.key))\n",
     "        )\n",
     "    )\n",
     ").subscribe(LogObserver('group_by src'))\n",
@@ -4459,12 +4464,74 @@
     "\n",
     "def _send(item):\n",
     "    src2dest[item.src].on_next(item)\n",
-    " \n",
+    "\n",
     "obs.pipe(\n",
     "    # ops.filter(lambda item: isinstance(item, Message)),\n",
     "    ops.do_action(_send)\n",
     "\n",
     ").subscribe()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CIAO\n",
+      "PAO\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BaseClass:\n",
+    "    def sum(self):\n",
+    "        return 'sum'\n",
+    "    pass\n",
+    "\n",
+    "def make_class(func):\n",
+    "\n",
+    "    class ModClass(BaseClass):\n",
+    "        def sum(self):\n",
+    "            func()\n",
+    "\n",
+    "    return ModClass\n",
+    "\n",
+    "hope_class = make_class(lambda: print(\"CIAO\"))\n",
+    "hope_class().sum()\n",
+    "\n",
+    "hope_class = make_class(lambda: print(\"PAO\"))\n",
+    "hope_class().sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.make_class.<locals>.ModClass'> <class 'type'> <__main__.make_class.<locals>.ModClass object at 0x7f528a2d6d30> <class '__main__.make_class.<locals>.ModClass'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hope_class, type(hope_class), hope_class(), type(hope_class()))"
    ],
    "metadata": {
     "collapsed": false,
