--- a/test.ipynb
+++ b/test.ipynb
@@ -4678,199 +4678,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "outputs": [],
-   "source": [
-    "from enum import Flag, Enum\n",
-    "from dataclasses import dataclass\n",
-    "\n",
-    "@dataclass\n",
-    "class MANUAL:\n",
-    "    value: str = ''\n",
-    "\n",
-    "class UID(Enum):\n",
-    "    RANDOM = None\n",
-    "    DEF = 1\n",
-    "\n",
-    "    def manual(value):\n",
-    "        return MANUAL(value)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "outputs": [],
-   "source": [
-    "class TestClass:\n",
-    "    pass\n",
-    "\n",
-    "def test_func():\n",
-    "    pass"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'TestClass'"
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "TestClass.__name__"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "1\n",
-      "2\n",
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_tuple = (1,2,3)\n",
-    "my_list = [1,2,3]\n",
-    "\n",
-    "for i in my_tuple:\n",
-    "    print(i)\n",
-    "\n",
-    "for i in my_list:\n",
-    "    print(i)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "False"
      },
-     "execution_count": 100,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "isinstance(my_list, Tuple)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "list"
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(my_list)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'tuple' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [102]\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;43mlist\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mmy_tuple\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[0;31mTypeError\u001B[0m: 'tuple' object is not callable"
-     ]
-    }
-   ],
-   "source": [
-    "list(my_tuple)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "from collections.abc import Iterable\n",
-    "\n",
-    "ciao = 1\n",
-    "\n",
-    "if not isinstance(ciao, Iterable):\n",
-    "    ciao = (ciao,)\n",
-    "\n",
-    "for i in ciao:\n",
-    "    print(i)"
+    "False and print(\"ciao\")"
    ],
    "metadata": {
     "collapsed": false,
