Decorator to_element_cls accept function_coroutine

--- a/test.ipynb
+++ b/test.ipynb
@@ -3939,7 +3939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -3947,13 +3947,13 @@
      "text": [
       "Collecting aioredis\r\n",
       "  Downloading aioredis-2.0.1-py3-none-any.whl (71 kB)\r\n",
-      "\u001B[K     |████████████████████████████████| 71 kB 7.8 MB/s  eta 0:00:01\r\n",
-      "\u001B[?25hRequirement already satisfied: typing-extensions in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from aioredis) (4.0.1)\r\n",
-      "Collecting async-timeout\r\n",
+      "\u001B[K     |████████████████████████████████| 71 kB 635 kB/s eta 0:00:01\r\n",
+      "\u001B[?25hCollecting async-timeout\r\n",
       "  Downloading async_timeout-4.0.2-py3-none-any.whl (5.8 kB)\r\n",
+      "Requirement already satisfied: typing-extensions in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from aioredis) (4.0.1)\r\n",
       "Installing collected packages: async-timeout, aioredis\r\n",
       "Successfully installed aioredis-2.0.1 async-timeout-4.0.2\r\n",
-      "\u001B[33mWARNING: You are using pip version 21.1.1; however, version 21.3.1 is available.\r\n",
+      "\u001B[33mWARNING: You are using pip version 21.1.1; however, version 22.0.3 is available.\r\n",
       "You should consider upgrading via the '/home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/bin/python3.8 -m pip install --upgrade pip' command.\u001B[0m\r\n"
      ]
     }
@@ -3970,7 +3970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -4020,24 +4020,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'Observable' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [17]\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mrx\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mof\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m,\u001B[49m\u001B[38;5;241;43m2\u001B[39;49m\u001B[43m,\u001B[49m\u001B[38;5;241;43m3\u001B[39;49m\u001B[43m,\u001B[49m\u001B[38;5;241;43m4\u001B[39;49m\u001B[43m,\u001B[49m\u001B[38;5;241;43m5\u001B[39;49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpipe\u001B[49m\u001B[43m(\u001B[49m\u001B[43mciao\u001B[49m\u001B[43m(\u001B[49m\u001B[43mparam\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mrx\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpipe\u001B[49m\u001B[43m(\u001B[49m\u001B[43mrx\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mempty\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39msubscribe(\u001B[38;5;28mprint\u001B[39m)\n",
-      "File \u001B[0;32m~/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages/rx/core/observable/observable.py:265\u001B[0m, in \u001B[0;36mObservable.pipe\u001B[0;34m(self, *operators)\u001B[0m\n\u001B[1;32m    246\u001B[0m \u001B[38;5;124;03m\"\"\"Compose multiple operators left to right.\u001B[39;00m\n\u001B[1;32m    247\u001B[0m \n\u001B[1;32m    248\u001B[0m \u001B[38;5;124;03mComposes zero or more operators into a functional composition.\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    262\u001B[0m \u001B[38;5;124;03m     The composed observable.\u001B[39;00m\n\u001B[1;32m    263\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    264\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpipe\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m pipe\n\u001B[0;32m--> 265\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mpipe\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43moperators\u001B[49m\u001B[43m)\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages/rx/core/pipe.py:106\u001B[0m, in \u001B[0;36mpipe.<locals>.compose\u001B[0;34m(source)\u001B[0m\n\u001B[1;32m    105\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcompose\u001B[39m(source: Any) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m Any:\n\u001B[0;32m--> 106\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mreduce\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43;01mlambda\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mobs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mop\u001B[49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mobs\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moperators\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msource\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages/rx/core/pipe.py:106\u001B[0m, in \u001B[0;36mpipe.<locals>.compose.<locals>.<lambda>\u001B[0;34m(obs, op)\u001B[0m\n\u001B[1;32m    105\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcompose\u001B[39m(source: Any) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m Any:\n\u001B[0;32m--> 106\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m reduce(\u001B[38;5;28;01mlambda\u001B[39;00m obs, op: \u001B[43mop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mobs\u001B[49m\u001B[43m)\u001B[49m, operators, source)\n",
-      "File \u001B[0;32m~/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages/rx/core/pipe.py:106\u001B[0m, in \u001B[0;36mpipe.<locals>.compose\u001B[0;34m(source)\u001B[0m\n\u001B[1;32m    105\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcompose\u001B[39m(source: Any) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m Any:\n\u001B[0;32m--> 106\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mreduce\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43;01mlambda\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mobs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mop\u001B[49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mobs\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moperators\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msource\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages/rx/core/pipe.py:106\u001B[0m, in \u001B[0;36mpipe.<locals>.compose.<locals>.<lambda>\u001B[0;34m(obs, op)\u001B[0m\n\u001B[1;32m    105\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcompose\u001B[39m(source: Any) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m Any:\n\u001B[0;32m--> 106\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m reduce(\u001B[38;5;28;01mlambda\u001B[39;00m obs, op: \u001B[43mop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mobs\u001B[49m\u001B[43m)\u001B[49m, operators, source)\n",
-      "File \u001B[0;32m~/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages/rx/core/pipe.py:106\u001B[0m, in \u001B[0;36mpipe.<locals>.compose\u001B[0;34m(source)\u001B[0m\n\u001B[1;32m    105\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcompose\u001B[39m(source: Any) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m Any:\n\u001B[0;32m--> 106\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mreduce\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43;01mlambda\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mobs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mop\u001B[49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mobs\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moperators\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msource\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages/rx/core/pipe.py:106\u001B[0m, in \u001B[0;36mpipe.<locals>.compose.<locals>.<lambda>\u001B[0;34m(obs, op)\u001B[0m\n\u001B[1;32m    105\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcompose\u001B[39m(source: Any) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m Any:\n\u001B[0;32m--> 106\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m reduce(\u001B[38;5;28;01mlambda\u001B[39;00m obs, op: \u001B[43mop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mobs\u001B[49m\u001B[43m)\u001B[49m, operators, source)\n",
-      "\u001B[0;31mTypeError\u001B[0m: 'Observable' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Reader) Message Received: {'type': 'message', 'pattern': None, 'channel': b'channel:1', 'data': b'Hello'}\n",
+      "(Reader) Message Received: {'type': 'message', 'pattern': None, 'channel': b'channel:2', 'data': b'World'}\n",
+      "(Reader) Message Received: {'type': 'message', 'pattern': None, 'channel': b'channel:1', 'data': b'STOP'}\n",
+      "(Reader) STOP\n"
      ]
     }
    ],
@@ -4061,7 +4053,7 @@
     "                if message[\"data\"].decode() == STOPWORD:\n",
     "                    print(\"(Reader) STOP\")\n",
     "                    break\n",
-    "            await asyncio.sleep(0.01)\n",
+    "            # await asyncio.sleep(0.01)\n",
     "        except asyncio.TimeoutError:\n",
     "            pass\n",
     "\n",
