Add PubSub (observer/observable) for Redis

--- a/test.ipynb
+++ b/test.ipynb
@@ -4085,19 +4085,331 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "import aioredis\n",
+    "\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "async def main():\n",
+    "    redis = aioredis.from_url(\"redis://localhost\")\n",
+    "    res = await redis.setnx('loop:uid_loop1', b'1')\n",
+    "    print(res)\n",
+    "\n",
+    "    res = await redis.setnx('element:uid_loop1:uid_element', b'1')\n",
+    "    print(res)\n",
+    "\n",
+    "    res = await redis.setnx('k:uid_loop1', b'1')\n",
+    "    print(res)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # for key in await redis.keys('loop:*'):\n",
+    "    #     await redis.delete(key)\n",
+    "\n",
+    "    # Transaction: check existence before set\n",
+    "    async with redis.pipeline(transaction=True) as pipe:\n",
+    "        await pipe.watch('foo')\n",
+    "        if not await pipe.exists('foo'):\n",
+    "            pipe.multi()\n",
+    "            res = await pipe.incr(\"foo\").execute()\n",
+    "    print(res)\n",
+    "\n",
+    "asyncio.run(main())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "import aioredis\n",
+    "\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "STOPWORD = \"STOP\"\n",
+    "\n",
+    "async def reader(channel: aioredis.client.PubSub):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            # async with async_timeout.timeout(1):\n",
+    "            message = await channel.get_message(ignore_subscribe_messages=True)\n",
+    "            if message is not None:\n",
+    "                print(f\"(Reader) Message Received: {message}\")\n",
+    "                if message[\"data\"].decode() == STOPWORD:\n",
+    "                    print(\"(Reader) STOP\")\n",
+    "                    break\n",
+    "            # await asyncio.sleep(0.01)\n",
+    "        except asyncio.TimeoutError:\n",
+    "            pass\n",
+    "\n",
+    "from rx.core.notification import OnNext, OnError, OnCompleted\n",
+    "import pickle\n",
+    "from typing import Dict\n",
+    "\n",
+    "def object_hook(o: Dict):\n",
+    "\n",
+    "    # print('object_hook',o)\n",
+    "    if 'has_value' in o:\n",
+    "        if o.get('kind') == 'N':\n",
+    "            return OnNext(o['value'])\n",
+    "        elif o.get('kind') == 'E':\n",
+    "            return OnError(o['exception'])\n",
+    "        elif o.get('kind') == 'C':\n",
+    "            return OnCompleted()\n",
+    "    return o\n",
+    "\n",
+    "def test_callback(message):\n",
+    "\n",
+    "    # print(\"json\", message)\n",
+    "    what = pickle.loads(message['data'])\n",
+    "    # what = json.loads(message['data'], object_hook=object_hook)\n",
+    "    print(\"what\", type(what.value), what)\n",
+    "\n",
+    "async def main():\n",
+    "    redis = aioredis.from_url(\"redis://localhost\")\n",
+    "    pubsub = redis.pubsub()\n",
+    "    await pubsub.psubscribe(**{\"__key*__:*\": test_callback, \"loop_uid:element_uid\": test_callback})\n",
+    "\n",
+    "    # future = asyncio.create_task(reader(pubsub))\n",
+    "\n",
+    "    await redis.publish(\"channel:1\", \"Hello\")\n",
+    "    pub_observer = RedisPublishObserver(\"loop_uid:element_uid\")\n",
+    "\n",
+    "    pub_observer.on_next(Message(value=PayloadTest(), src='src0'))\n",
+    "    pub_observer.on_next(2)\n",
+    "    pub_observer.on_error(Message(value=\"error\", src='src0'))\n",
+    "    pub_observer.on_completed()\n",
+    "\n",
+    "    await asyncio.sleep(6)\n",
+    "    await redis.publish(\"channel:2\", \"World\")\n",
+    "    await redis.publish(\"channel:1\", STOPWORD)\n",
+    "\n",
+    "    # await future\n",
+    "\n",
+    "    await pubsub.unsubscribe(\"channel:1\", \"channel:2\", \"__key*__:*\", \"loop_uid:element_uid\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    asyncio.run(main())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "import asyncio\n",
+    "import aioredis\n",
+    "\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "import rx\n",
+    "from rx.subject import Subject\n",
+    "from rx.core import Observer, Observable, ConnectableObservable, typing\n",
+    "from rx.disposable import Disposable, CompositeDisposable\n",
+    "from rx import operators as ops\n",
+    "from dataclasses import dataclass, field\n",
+    "\n",
+    "from typing import List\n",
+    "\n",
+    "\n",
+    "from dataclasses import dataclass, field\n",
+    "\n",
+    "@dataclass\n",
+    "class PayloadTest:\n",
+    "    name: str ='ciao'\n",
+    "    number: int = 6\n",
+    "    numbers: List = field(default_factory=lambda: [1,2,3])\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class Port:\n",
+    "    # TODO: add method to manipulate operators (append, prepend, etc...) and update pipe/input/subscribe?!\n",
+    "    input: Subject = None\n",
+    "    pipe: Observable = None\n",
+    "    operators: List =  field(default_factory=lambda: [])\n",
+    "    output: Subject = None\n",
+    "    disposable: Disposable = None\n",
+    "\n",
+    "import pickle\n",
+    "\n",
+    "def _serializer(item):\n",
+    "    return pickle.dumps(item, pickle.HIGHEST_PROTOCOL)\n",
+    "    # return json.dumps(item, default=lambda obj: obj.__dict__)\n",
+    "\n",
+    "class RedisPublishObserver(Observer):\n",
+    "\n",
+    "    def __init__(self, channel, redis = None) -> None:\n",
+    "        self._channel = channel\n",
+    "        self._queue = asyncio.Queue()\n",
+    "        self._redis = redis or aioredis.from_url(\"redis://localhost\")\n",
+    "\n",
+    "        self._p_in = Port(input=Subject(), operators=[ops.materialize()])\n",
+    "        self._p_in.pipe = self._p_in.input.pipe(*self._p_in.operators)\n",
+    "        self._p_in.disposable = self._p_in.pipe.subscribe(on_next=lambda item: self._publish(item))\n",
+    "\n",
+    "        self._task = asyncio.create_task(self._publish_queue())\n",
+    "\n",
+    "        super().__init__(self._p_in.input.on_next, self._p_in.input.on_error, self._p_in.input.on_completed)\n",
+    "\n",
+    "    def _publish(self, item):\n",
+    "        self._queue.put_nowait(item)\n",
+    "\n",
+    "    async def _publish_queue(self):\n",
+    "        while True:\n",
+    "            item = await self._queue.get()\n",
+    "            await self._redis.publish(self._channel, _serializer(item))\n",
+    "\n",
+    "    def dispose(self) -> None:\n",
+    "        self._task.cancel()\n",
+    "        self._p_in.disposable.dispose()\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        self.dispose()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Reader) Message Received: {'type': 'message', 'pattern': None, 'channel': b'channel:1', 'data': b'Hello'}\n",
-      "(Reader) Message Received: {'type': 'message', 'pattern': None, 'channel': b'channel:2', 'data': b'World'}\n",
-      "(Reader) Message Received: {'type': 'message', 'pattern': None, 'channel': b'channel:1', 'data': b'STOP'}\n",
-      "(Reader) STOP\n"
+      "subscribe\n",
+      "ciaooooooo\n"
      ]
     }
    ],
+   "source": [
+    "import asyncio\n",
+    "import aioredis\n",
+    "\n",
+    "\n",
+    "class RedisSubscribeObservable(Observable):\n",
+    "    def __init__(self, channels_pattern, redis=None) -> None:\n",
+    "        self._redis = None\n",
+    "        self._pubsub = None\n",
+    "        self._channels_pattern = channels_pattern if isinstance(channels_pattern, List) else [channels_pattern]\n",
+    "\n",
+    "        def on_subscribe(observer, scheduler):\n",
+    "            print(\"subscribe\")\n",
+    "\n",
+    "            async def init_redis_sub():\n",
+    "                self._redis = redis or aioredis.from_url(\"redis://localhost\")\n",
+    "                self._pubsub = redis.pubsub()\n",
+    "\n",
+    "                patterns_callbacks = {pattern: self._on_publish for pattern in self._channels_pattern}\n",
+    "                print(patterns_callbacks)\n",
+    "                await self._pubsub.psubscribe(**patterns_callbacks)\n",
+    "\n",
+    "            task = asyncio.create_task(init_redis_sub())\n",
+    "\n",
+    "            return CompositeDisposable(Disposable(lambda: task.cancel()),\n",
+    "                                       Disposable(lambda: asyncio.create_task(self.unsubscribe())))\n",
+    "\n",
+    "            # async def _aio_sub():\n",
+    "            #    observer.on_next(i)\n",
+    "            #     loop.call_soon(observer.on_completed)\n",
+    "            #     loop.call_soon(functools.partial(observer.on_error, e))\n",
+    "            #\n",
+    "            # task = asyncio.ensure_future(_aio_sub(), loop=loop)\n",
+    "            # return Disposable(lambda: task.cancel())\n",
+    "\n",
+    "        self._auto_connect = rx.create(on_subscribe).pipe(ops.share())\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def _subscribe_core(self, observer, scheduler = None):\n",
+    "        return self._auto_connect.subscribe(observer, scheduler=scheduler)\n",
+    "\n",
+    "    async def unsubscribe(self):\n",
+    "        print(\"ciaooooooo\")\n",
+    "        await self._pubsub.unsubscribe(*self._channels_pattern)\n",
+    "\n",
+    "    def _on_publish(self, message):\n",
+    "        print(\"_onpublish\", message)\n",
+    "\n",
+    "\n",
+    "ciao = RedisSubscribeObservable(\"loop_uid:element_uid\")\n",
+    "a = ciao.subscribe()\n",
+    "b = ciao.subscribe()\n",
+    "\n",
+    "pub_observer = RedisPublishObserver(\"loop_uid:element_uid\")\n",
+    "\n",
+    "pub_observer.on_next(Message(value=PayloadTest(), src='src0'))\n",
+    "pub_observer.on_next(2)\n",
+    "pub_observer.on_error(Message(value=\"error\", src='src0'))\n",
+    "pub_observer.on_completed()\n",
+    "\n",
+    "await asyncio.sleep(10)\n",
+    "\n",
+    "a.dispose()\n",
+    "b.dispose()\n",
+    "\n",
+    "await asyncio.sleep(10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "!pip3 install pynput"
    ],
@@ -4340,38 +4652,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(9698) on next: Message(1.5, src0, None, 0, 1643623686.744303) | group_by src\n",
-      "(9698) on next: Message(2.0, src1, None, 0, 1643623686.7444587) | group_by src\n",
+      "(4334) on next: Message(1.5, src0, None, 0, 1644249651.481198) | group_by src\n",
+      "(4334) on next: Message(2.0, src1, None, 0, 1644249651.4813356) | group_by src\n",
       "completed | group_by src\n",
       "\n",
-      "(9548) on next: CallMethod(src='src0', dst=None, hops=0, timestamp=1643623686.6173112, name='method_name', args=['arg0'], kwargs={'kwarg0': 'kwarg0_value'}) | method call\n",
+      "(4178) on next: CallMethod(src='src0', dst=None, hops=0, timestamp=1644249651.4110744, name='method_name', args=['arg0'], kwargs={'kwarg0': 'kwarg0_value'}) | method call\n",
       "completed | method call\n",
       "\n",
-      "(9680) on next: Message(1, src0, None, 1, 1643623686.6172044) | global (not grouped)\n",
-      "(9680) on next: Message(2, src0, None, 1, 1643623686.6172693) | global (not grouped)\n",
-      "(9680) on next: Message(3, src1, None, 1, 1643623686.6173944) | global (not grouped)\n",
+      "(4283) on next: Message(1, src0, None, 1, 1644249651.4109545) | global (not grouped)\n",
+      "(4283) on next: Message(2, src0, None, 1, 1644249651.4110332) | global (not grouped)\n",
+      "(4283) on next: Message(3, src1, None, 1, 1644249651.4111583) | global (not grouped)\n",
       "completed | global (not grouped)\n",
       "\n",
-      "(7937) on next: Message(1, src0, None, 1, 1643623686.6172044) | dst0\n",
-      "(7937) on next: Message(1, src0, None, 1, 1643623686.6172392) | dst0\n",
-      "(7937) on next: Message(2, src0, None, 1, 1643623686.6172693) | dst0\n",
-      "(7937) on next: CallMethod(src='src0', dst=None, hops=0, timestamp=1643623686.6173112, name='method_name', args=['arg0'], kwargs={'kwarg0': 'kwarg0_value'}) | dst0\n",
-      "(1987) on next: Message(1, src1, None, 1, 1643623686.6173415) | dst1\n",
-      "(1987) on next: Message(2, src1, None, 1, 1643623686.6173692) | dst1\n",
-      "(1987) on next: Message(3, src1, None, 1, 1643623686.6173944) | dst1\n"
+      "(4283) on next: Message(1, src0, None, 1, 1644249651.4109545) | dst0\n",
+      "(4283) on next: Message(1, src0, None, 1, 1644249651.4110036) | dst0\n",
+      "(4283) on next: Message(2, src0, None, 1, 1644249651.4110332) | dst0\n",
+      "(4283) on next: CallMethod(src='src0', dst=None, hops=0, timestamp=1644249651.4110744, name='method_name', args=['arg0'], kwargs={'kwarg0': 'kwarg0_value'}) | dst0\n",
+      "(4232) on next: Message(1, src1, None, 1, 1644249651.4111044) | dst1\n",
+      "(4232) on next: Message(2, src1, None, 1, 1644249651.4111316) | dst1\n",
+      "(4232) on next: Message(3, src1, None, 1, 1644249651.4111583) | dst1\n"
      ]
     },
     {
      "data": {
-      "text/plain": "<rx.disposable.disposable.Disposable at 0x7f84cd32cf10>"
+      "text/plain": "<rx.disposable.disposable.Disposable at 0x7efd67c52820>"
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4683,6 +4995,62 @@
    ],
    "source": [
     "False and print(\"ciao\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{1: 'ciao', 2: 'ciao', 3: 'ciao'}"
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{i: \"ciao\" for i in [1,2,3]}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "['casa']"
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ciao = \"casa\"\n",
+    "print(isinstance(ciao, List))\n",
+    "ciao = ciao if isinstance(ciao, list) else [ciao]\n",
+    "ciao"
    ],
    "metadata": {
     "collapsed": false,
