--- a/test1.ipynb
+++ b/test1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -25,203 +25,198 @@
     "from dataclasses import dataclass, field\n",
     "from typing import Type, Any, List, Tuple, Callable, Optional, Union, Awaitable, Coroutine, NamedTuple\n",
     "\n",
-    "import time\n",
-    "@dataclass\n",
-    "class Item:\n",
-    "    src: str = None\n",
-    "    dst: str = None\n",
-    "    hops: int = 0\n",
-    "    timestamp: float = field(default_factory=lambda: time.time())\n",
-    "\n",
-    "@dataclass\n",
-    "class Message(Item):\n",
-    "    value: Any = None\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        return f\"{self.__class__.__name__}({self.value}, {self.src}, {self.dst}, {self.hops}, {self.timestamp})\"\n",
-    "\n",
-    "@dataclass\n",
-    "class CallMethod(Item):\n",
-    "    name: str = None\n",
-    "    args: list = None\n",
-    "    kwargs: dict = None\n",
-    "\n",
-    "@dataclass\n",
-    "class PayloadTest:\n",
-    "    name: str ='ciao'\n",
-    "    number: int = 6\n",
-    "    numbers: List = field(default_factory=lambda: [1,2,3])\n",
-    "\n",
-    "\n",
-    "@dataclass\n",
-    "class Port:\n",
-    "    # TODO: add method to manipulate operators (append, prepend, etc...) and update pipe/input/subscribe?!\n",
-    "    input: Subject = None\n",
-    "    pipe: Observable = None\n",
-    "    operators: List =  field(default_factory=lambda: [])\n",
-    "    output: Subject = None\n",
-    "    disposable: Disposable = None\n",
-    "\n",
-    "import pickle\n",
-    "\n",
-    "def _serializer(item):\n",
-    "    return pickle.dumps(item, pickle.HIGHEST_PROTOCOL)\n",
-    "    # return json.dumps(item, default=lambda obj: obj.__dict__)\n",
-    "\n",
-    "class RedisPublishObserver(Observer):\n",
-    "\n",
-    "    def __init__(self, channel, redis = None) -> None:\n",
-    "        self._channel = channel\n",
-    "        self._queue = asyncio.Queue()\n",
-    "        self._redis = redis or aioredis.from_url(\"redis://localhost\")\n",
-    "\n",
-    "        self._p_in = Port(input=Subject(), operators=[ops.materialize()])\n",
-    "        self._p_in.pipe = self._p_in.input.pipe(*self._p_in.operators)\n",
-    "        self._p_in.disposable = self._p_in.pipe.subscribe(on_next=lambda item: self._publish(item))\n",
-    "\n",
-    "        self._task = asyncio.create_task(self._publish_queue())\n",
-    "\n",
-    "        super().__init__(self._p_in.input.on_next, self._p_in.input.on_error, self._p_in.input.on_completed)\n",
-    "\n",
-    "    def _publish(self, item):\n",
-    "        self._queue.put_nowait(item)\n",
-    "\n",
-    "    async def _publish_queue(self):\n",
-    "        while True:\n",
-    "            item = await self._queue.get()\n",
-    "            print(\"PUBLISH\", self._channel, item)\n",
-    "            await self._redis.publish(self._channel, _serializer(item))\n",
-    "\n",
-    "    def dispose(self) -> None:\n",
-    "        self._task.cancel()\n",
-    "        self._p_in.disposable.dispose()\n",
-    "\n",
-    "    def __del__(self):\n",
-    "        self.dispose()"
+    "import mape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "subscribe\n",
-      "{'loop_uid:element_uid': <function RedisSubscribeObservable.__init__.<locals>.on_subscribe.<locals>._on_publish at 0x7feb38194790>, 'loop_uid:element_uid2': <function RedisSubscribeObservable.__init__.<locals>.on_subscribe.<locals>._on_publish at 0x7feb38194790>}\n",
-      "PUBLISH loop_uid:element_uid OnNext(Message(PayloadTest(name='ciao', number=6, numbers=[1, 2, 3]), src0, None, 0, 1644254365.8394518))\n",
-      "(3103) on next: Message(PayloadTest(name='ciao', number=6, numbers=[1, 2, 3]), src0, None, 0, 1644254365.8394518) | a\n",
-      "PUBLISH loop_uid:element_uid OnNext(2.0)\n",
-      "(3103) on next: 2 | a\n",
-      "PUBLISH loop_uid:element_uid OnError(Message(error, src2, None, 0, 1644254365.8395813))\n",
-      "on error: Message(error, src2, None, 0, 1644254365.8395813) | a\n",
-      "subscribe\n",
-      "dajee\n",
-      "{'loop_uid:element_uid': <function RedisSubscribeObservable.__init__.<locals>.on_subscribe.<locals>._on_publish at 0x7feb38128820>, 'loop_uid:element_uid2': <function RedisSubscribeObservable.__init__.<locals>.on_subscribe.<locals>._on_publish at 0x7feb38128820>}\n",
-      "PUBLISH loop_uid:element_uid2 OnNext(Message(PayloadTest(name='ciao', number=6, numbers=[1, 2, 3]), src10, None, 0, 1644254369.8555171))\n",
-      "PUBLISH loop_uid:element_uid2 OnNext(20.0)\n",
-      "(2854) on next: Message(PayloadTest(name='ciao', number=6, numbers=[1, 2, 3]), src10, None, 0, 1644254369.8555171) | b\n",
-      "(2854) on next: 20 | b\n",
-      "PUBLISH loop_uid:element_uid2 OnCompleted()\n",
-      "completed | b\n"
+      "(9672) on next: Message(a, src.A, None, 0, 16:45:17.929) | A, B\n",
+      "(9672) on next: a | A, B\n",
+      "B\n",
+      "(9672) on next: Message(PayloadTest(name='ciao', number=6, numbers=[1, 2, 3]), src.B, None, 0, 16:45:21.931) | A, B\n",
+      "(8537) on next: Message(PayloadTest(name='ciao', number=6, numbers=[1, 2, 3]), src.B, None, 0, 16:45:21.931) | B\n",
+      "(9672) on next: 20 | A, B\n",
+      "(8537) on next: 20 | B\n",
+      "(8537) on next: b1 | B\n",
+      "(9672) on next: b1 | A, B\n",
+      "(9672) on next: b2 | A, B\n",
+      "(8537) on next: b2 | B\n",
+      "(9672) on next: b3 | A, B\n",
+      "(8537) on next: b3 | B\n",
+      "(9672) on next: a1 | A, B\n",
+      "(9672) on next: a2 | A, B\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mape.redis import PubObserver, SubObservable\n",
+    "from mape.utils import LogObserver\n",
+    "from mape.typing import Message\n",
+    "\n",
+    "from dataclasses import dataclass, field\n",
+    "\n",
+    "@dataclass\n",
+    "class PayloadTest:\n",
+    "    name: str = 'ciao'\n",
+    "    number: int = 6\n",
+    "    numbers: List = field(default_factory=lambda: [1, 2, 3])\n",
+    "\n",
+    "ciao = SubObservable([\"A\", \"B\"])\n",
+    "a = ciao.subscribe(LogObserver(\"A, B\"))\n",
+    "\n",
+    "ciao = SubObservable(\"B\")\n",
+    "b = ciao.subscribe(LogObserver(\"B\"))\n",
+    "\n",
+    "pub_observer_a = PubObserver(\"A\")\n",
+    "pub_observer_a.on_next(Message(value='a', src='src.A'))\n",
+    "pub_observer_a.on_next('a')\n",
+    "# pub_observer.on_error(Message(value=\"error\", src='src2'))\n",
+    "# pub_observer.on_completed()\n",
+    "\n",
+    "await asyncio.sleep(4)\n",
+    "# pub_observer.dispose()\n",
+    "\n",
+    "print(\"B\")\n",
+    "\n",
+    "pub_observer_b = PubObserver(\"B\")\n",
+    "pub_observer_b.on_next(Message(value=PayloadTest(), src='src.B'))\n",
+    "pub_observer_b.on_next(20)\n",
+    "# pub_observer.on_error(Message(value=\"error\", src='src20'))\n",
+    "# pub_observer.on_completed()\n",
+    "\n",
+    "await asyncio.sleep(4)\n",
+    "pub_observer_b.on_next('b1')\n",
+    "await asyncio.sleep(0.1)\n",
+    "pub_observer_b.on_next('b2')\n",
+    "await asyncio.sleep(0)\n",
+    "pub_observer_b.on_next('b3')\n",
+    "pub_observer_a.on_next('a1')\n",
+    "await asyncio.sleep(10)\n",
+    "pub_observer_a.on_next('a2')\n",
+    "await asyncio.sleep(1)\n",
+    "\n",
+    "a.dispose()\n",
+    "b.dispose()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "silent exception\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_138620/3984813001.py:53: RuntimeWarning: coroutine 'RedisSubscribeObservable.unsubscribe' was never awaited\n",
-      "  self.unsubscribe()\n",
-      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
+      "wrapped\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/muttley/Projects/SecondLevelDegrees/courses/Thesis/source/playground/mape/utils.py\", line 129, in task_exception\n",
+      "    return await awaitable\n",
+      "  File \"/tmp/ipykernel_176147/836816186.py\", line 18, in test_raise_unmanaged_wrapped\n",
+      "    raise Exception('wrapped')\n",
+      "Exception: wrapped\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cancel\n",
+      "wrapped\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "wrapped\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/muttley/Projects/SecondLevelDegrees/courses/Thesis/source/playground/mape/utils.py\", line 129, in task_exception\n",
+      "    return await awaitable\n",
+      "  File \"/tmp/ipykernel_176147/836816186.py\", line 18, in test_raise_unmanaged_wrapped\n",
+      "    raise Exception('wrapped')\n",
+      "Exception: wrapped\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cancel\n",
+      "decorated\n",
+      "cancel\n"
      ]
     }
    ],
    "source": [
+    "\"\"\" MANAGE TASK EXCEPTION \"\"\"\n",
+    "\n",
     "import asyncio\n",
     "import aioredis\n",
-    "import pickle\n",
+    "import mape\n",
     "\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
     "\n",
-    "class RedisSubscribeObservable(Observable):\n",
-    "    def __init__(self, channels_patterns, redis=None) -> None:\n",
-    "        self._redis = redis or aioredis.from_url(\"redis://localhost\")\n",
-    "        self._pubsub = None\n",
-    "        self._channels_pattern = channels_patterns if isinstance(channels_patterns, List) else [channels_patterns]\n",
-    "        self._disposable = CompositeDisposable()\n",
+    "async def test_raise_unmanaged(param=None):\n",
+    "    while True:\n",
+    "        print(param)\n",
+    "        raise Exception('unmanaged')\n",
+    "        await asyncio.sleep(2)\n",
     "\n",
-    "        def on_subscribe(observer, scheduler):\n",
-    "            print(\"subscribe\")\n",
+    "@mape.utils.log_task_exception\n",
+    "async def test_raise_unmanaged_wrapped(param=None):\n",
+    "    while True:\n",
+    "        print(param)\n",
+    "        raise Exception('wrapped')\n",
+    "        await asyncio.sleep(2)\n",
     "\n",
-    "            def _on_publish(message):\n",
-    "                item = pickle.loads(message['data'])\n",
-    "                observer.on_next(item)\n",
-    "\n",
-    "            async def init_redis_sub():\n",
-    "                self._pubsub = self._redis.pubsub()\n",
-    "\n",
-    "                patterns_callbacks = {pattern: _on_publish for pattern in self._channels_pattern}\n",
-    "                print(patterns_callbacks)\n",
-    "                await self._pubsub.psubscribe(**patterns_callbacks)\n",
-    "                await self._pubsub.run()\n",
-    "\n",
-    "            task = asyncio.create_task(init_redis_sub())\n",
-    "            self._disposable.add(Disposable(lambda: task.cancel()))\n",
-    "\n",
-    "            return Disposable(lambda: asyncio.create_task(self.unsubscribe()))\n",
-    "\n",
-    "            # async def _aio_sub():\n",
-    "            #    observer.on_next(i)\n",
-    "            #     loop.call_soon(observer.on_completed)\n",
-    "            #     loop.call_soon(functools.partial(observer.on_error, e))\n",
-    "            #\n",
-    "            # task = asyncio.ensure_future(_aio_sub(), loop=loop)\n",
-    "            # return Disposable(lambda: task.cancel())\n",
-    "\n",
-    "        self._auto_connect = rx.create(on_subscribe).pipe(ops.dematerialize(), ops.share())\n",
-    "        super().__init__()\n",
-    "\n",
-    "    def _subscribe_core(self, observer, scheduler = None):\n",
-    "        return self._auto_connect.subscribe(observer, scheduler=scheduler)\n",
-    "\n",
-    "    async def unsubscribe(self):\n",
-    "        await self._pubsub.unsubscribe(*self._channels_pattern)\n",
-    "        self._disposable.dispose()\n",
-    "\n",
-    "    def __del__(self):\n",
-    "        self.unsubscribe()\n",
-    "\n",
-    "from mape.utils import LogObserver\n",
-    "\n",
-    "ciao = RedisSubscribeObservable([\"loop_uid:element_uid\",\"loop_uid:element_uid2\"])\n",
-    "a = ciao.subscribe(LogObserver(\"a\"))\n",
-    "ciao = RedisSubscribeObservable([\"loop_uid:element_uid2\"])\n",
-    "b = ciao.subscribe(LogObserver(\"b\"))\n",
-    "\n",
-    "pub_observer = RedisPublishObserver(\"loop_uid:element_uid\")\n",
-    "\n",
-    "pub_observer.on_next(Message(value=PayloadTest(), src='src0'))\n",
-    "pub_observer.on_next(2)\n",
-    "pub_observer.on_error(Message(value=\"error\", src='src2'))\n",
-    "pub_observer.on_completed()\n",
-    "\n",
-    "\n",
+    "task = asyncio.create_task(test_raise_unmanaged('silent exception'))\n",
     "await asyncio.sleep(4)\n",
-    "pub_observer.dispose()\n",
+    "print(\"cancel\")\n",
+    "task.cancel()\n",
     "\n",
-    "print(\"dajee\")\n",
-    "\n",
-    "pub_observer = RedisPublishObserver(\"loop_uid:element_uid2\")\n",
-    "\n",
-    "pub_observer.on_next(Message(value=PayloadTest(), src='src10'))\n",
-    "pub_observer.on_next(20)\n",
-    "# pub_observer.on_error(Message(value=\"error\", src='src20'))\n",
-    "pub_observer.on_completed()\n",
-    "\n",
+    "task = asyncio.create_task(mape.utils.task_exception(test_raise_unmanaged_wrapped('wrapped')))\n",
     "await asyncio.sleep(4)\n",
+    "print(\"cancel\")\n",
+    "task.cancel()\n",
     "\n",
-    "a.dispose()\n",
-    "b.dispose()"
+    "task = asyncio.create_task(test_raise_unmanaged_wrapped('decorated'))\n",
+    "await asyncio.sleep(4)\n",
+    "print(\"cancel\")\n",
+    "task.cancel()\n",
+    "\n",
+    "await asyncio.sleep(4)"
    ],
    "metadata": {
     "collapsed": false,
