Add factory method (create) to Message and CallMethod
Also did some refactor to avoid circular dependencies

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -227,6 +227,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/plataux/purse.git\r\n",
+      "  Cloning https://github.com/plataux/purse.git to /tmp/pip-req-build-plpkjuz9\r\n",
+      "  Running command git clone -q https://github.com/plataux/purse.git /tmp/pip-req-build-plpkjuz9\r\n",
+      "  Installing build dependencies ... \u001B[?25ldone\r\n",
+      "\u001B[?25h  Getting requirements to build wheel ... \u001B[?25ldone\r\n",
+      "\u001B[?25h    Preparing wheel metadata ... \u001B[?25ldone\r\n",
+      "\u001B[?25hRequirement already satisfied: aioredis~=2.0.0 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from purse==0.21) (2.0.1)\r\n",
+      "Collecting pydantic~=1.8.2\r\n",
+      "  Downloading pydantic-1.8.2-cp38-cp38-manylinux2014_x86_64.whl (13.7 MB)\r\n",
+      "\u001B[K     |████████████████████████████████| 13.7 MB 12.2 MB/s eta 0:00:01\r\n",
+      "\u001B[?25hRequirement already satisfied: setuptools>=50.0.0 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from purse==0.21) (56.0.0)\r\n",
+      "Requirement already satisfied: typing-extensions in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from aioredis~=2.0.0->purse==0.21) (4.0.1)\r\n",
+      "Requirement already satisfied: async-timeout in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from aioredis~=2.0.0->purse==0.21) (4.0.2)\r\n",
+      "Building wheels for collected packages: purse\r\n",
+      "  Building wheel for purse (PEP 517) ... \u001B[?25ldone\r\n",
+      "\u001B[?25h  Created wheel for purse: filename=purse-0.21-py3-none-any.whl size=19446 sha256=cab766f68cdbfba7678a89e4d0e84bd3ab0c733820f9f96c6d68b2096eb9675d\r\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-lk0moyfo/wheels/b9/d2/8f/8baa5e4e0778b75c9283a9117d544eb81a58843a4a41a72a66\r\n",
+      "Successfully built purse\r\n",
+      "Installing collected packages: pydantic, purse\r\n",
+      "Successfully installed purse-0.21 pydantic-1.8.2\r\n",
+      "\u001B[33mWARNING: You are using pip version 21.1.1; however, version 22.0.3 is available.\r\n",
+      "You should consider upgrading via the '/home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/bin/python3.8 -m pip install --upgrade pip' command.\u001B[0m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install git+https://github.com/plataux/purse.git"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 'f']\n",
+      "True\n",
+      "False\n",
+      "2\n",
+      "None\n",
+      "['c', 'd', 'e']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "import aioredis\n",
+    "from purse.collections import RedisList\n",
+    "\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "async def main():\n",
+    "    local_list = ['a', 'b', 'c', 'd', 'e', 'f']\n",
+    "\n",
+    "    # local Redis >= 6.0.x plain connection with default params\n",
+    "    red_con = aioredis.Redis()\n",
+    "    redis_key = 'redis_list'\n",
+    "\n",
+    "    # The value_type defines the class to serialize to and from\n",
+    "    redis_list = RedisList(redis=red_con, rkey=redis_key, value_type=str)\n",
+    "\n",
+    "    # Clear the list, in case it was previously populated\n",
+    "    await redis_list.clear()\n",
+    "\n",
+    "    # extend a Redis list with a Python list\n",
+    "    await redis_list.extend(local_list)\n",
+    "\n",
+    "    # async list comprehension\n",
+    "    print([x async for x in redis_list])\n",
+    "\n",
+    "    # contains\n",
+    "    print(await redis_list.contains('f'))  # True\n",
+    "    print(await redis_list.contains('g'))  # False\n",
+    "\n",
+    "    # getting the index of a value\n",
+    "    print(await redis_list.index('c'))  # 2\n",
+    "    print(await redis_list.index('g'))  # None, unlike a Python list that raises a ValueError\n",
+    "\n",
+    "    # slicing\n",
+    "    print(await redis_list.slice(2, 5))  # ['c', 'd', 'e']\n",
+    "\n",
+    "    # inserting values\n",
+    "    await redis_list.insert(2, 'x')\n",
+    "    await redis_list.insert(-2, 'y')\n",
+    "\n",
+    "    # getitem\n",
+    "    assert await redis_list.getitem(2) == 'x'\n",
+    "    assert await redis_list.getitem(-3) == 'y'\n",
+    "\n",
+    "    # some deque methods\n",
+    "    await redis_list.appendleft('z')\n",
+    "    await redis_list.pop()\n",
+    "    await redis_list.popleft()\n",
+    "\n",
+    "asyncio.run(main())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
